--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "engines": {
     "node": ">=7.5"
   },
+  "dependencies": {
+    "util.pkgwrap": "0.0.21"
+  },
   "devDependencies": {
     "@types/fs-extra": "2.0.0",
     "@types/node": "^7.0.12",
@@ -24,8 +27,7 @@
     "nyc": "^10.2.0",
     "tslint": "^5.1.0",
     "typescript": "^2.2.2",
-    "util.fixture": "0.0.47",
-    "util.pkgwrap": "0.0.21"
+    "util.fixture": "0.0.47"
   },
   "main": "index.js",
   "types": "./index.d.ts",
