--- a/package.json
+++ b/package.json
@@ -16,28 +16,29 @@
     "node": ">=7.5"
   },
   "dependencies": {
-    "util.pkgwrap": "0.0.26"
+    "util.pkgwrap": "0.0.57"
   },
   "devDependencies": {
-    "@types/fs-extra": "2.1.0",
-    "@types/node": "^7.0.13",
+    "@types/fs-extra": "3.0.2",
+    "@types/node": "^7.0.23",
     "ava": "^0.19.1",
-    "coveralls": "^2.13.0",
-    "fs-extra": "^2.1.2",
-    "nyc": "^10.2.0",
-    "tslint": "^5.1.0",
-    "typescript": "^2.2.2",
-    "util.fixture": "0.0.50"
+    "coveralls": "^2.13.1",
+    "fs-extra": "^3.0.1",
+    "nyc": "^11.0.1",
+    "tslint": "^5.4.2",
+    "typescript": "^2.3.4",
+    "util.fixture": "0.0.54"
   },
   "main": "index.js",
   "types": "./index.d.ts",
   "scripts": {
-    "all": "npm install && npm run lint && npm run build && npm test && npm run report",
-    "build": "./node_modules/.bin/pkgwrap --build",
-    "coverage": "./node_modules/.bin/pkgwrap --coverage",
-    "lint": "./node_modules/.bin/pkgwrap --lint",
-    "postinstall": "./node_modules/.bin/pkgwrap --postinstall",
-    "report": "./node_modules/.bin/pkgwrap --reporting",
-    "test": "./node_modules/.bin/pkgwrap --testing --ava"
+    "all": "npm install && npm run clean && npm run lint && npm run build && npm test && npm run report",
+    "build": "pkgwrap --build",
+    "clean": "pkgwrap --clean",
+    "coverage": "pkgwrap --coverage",
+    "lint": "pkgwrap --lint",
+    "postinstall": "pkgwrap --postinstall",
+    "report": "pkgwrap --reporting",
+    "test": "pkgwrap --testing --ava"
   }
 }
