--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,17 @@
 {
 	"compileOnSave": true,
 	"compilerOptions": {
+		"allowSyntheticDefaultImports" : true,
+		"alwaysStrict": true,
 		"declaration": true,
 		"experimentalDecorators": true,
 		"inlineSourceMap": true,
+		"lib": ["DOM", "ES6", "ES2016.Array.Include"],
 		"noImplicitAny": true,
 		"noImplicitReturns": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
+		"removeComments": false,
 		"skipLibCheck": true,
 		"sourceMap": false,
 		"strictNullChecks": false,
