--- a/package.json
+++ b/package.json
@@ -18,25 +18,53 @@
     "node": ">=7.x"
   },
   "devDependencies": {
-    "@types/fs-extra": "5.0.2",
-    "@types/node": "^9.6.6",
-    "ava": "^0.25.0",
-    "coveralls": "^3.0.0",
-    "fs-extra": "^5.0.0",
-    "nyc": "^11.7.1",
-    "tslint": "^5.9.1",
-    "typescript": "^2.8.3",
-    "util.fixture": "0.0.63",
-    "util.pkgwrap": "^0.0.91"
+    "@types/fs-extra": "5.0.4",
+    "@types/node": "^10.12.18",
+    "coveralls": "^3.0.2",
+    "fs-extra": "^7.0.1",
+    "jest": "^23.6.0",
+    "tslint": "^5.12.0",
+    "typescript": "^3.2.2",
+    "typescript-babel-jest": "^1.0.5",
+    "util.fixture": "0.0.65",
+    "util.pkgwrap": "^0.0.94"
+  },
+  "pkgwrap": {
+    "cleanup": [
+      "index.d.ts",
+      "index.js"
+    ]
+  },
+  "jest": {
+    "collectCoverage": true,
+    "coveragePathIgnorePatterns": [
+      "<rootDir>/node_modules/"
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "jsx",
+      "ts",
+      "tsx",
+      "json"
+    ],
+    "notify": false,
+    "testPathIgnorePatterns": [
+      "<rootDir>/node_modules/",
+      "__tests__/helpers"
+    ],
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.tsx?$",
+    "transform": {
+      "^.+\\.ts?$": "typescript-babel-jest"
+    },
+    "verbose": false
   },
   "scripts": {
-    "all": "yarn install && yarn run build && yarn test && yarn run report",
+    "all": "yarn install && yarn run build && yarn test",
     "build": "yarn clean && yarn run lint && pkgwrap --build",
     "clean": "pkgwrap --clean",
-    "coverage": "pkgwrap --coverage",
+    "coverage": "pkgwrap --coverage --jest",
     "lint": "pkgwrap --lint",
     "prepublishOnly": "yarn run all",
-    "report": "pkgwrap --reporting",
-    "test": "pkgwrap --testing --ava"
+    "test": "pkgwrap --testing --jest"
   }
 }
