--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "util.promise",
-	"version": "0.0.26",
+	"version": "0.0.27",
 	"author": "jmquigley <jmquigley@outlook.com>",
 	"description": "Utility functions for handling promises",
 	"private": false,
@@ -30,22 +30,21 @@
 		"@babel/preset-typescript": "^7.3.3",
 		"@babel/runtime": "^7.3.4",
 		"@types/fs-extra": "5.0.5",
-		"@types/jest": "^24.0.9",
-		"@types/node": "^11.10.5",
+		"@types/jest": "^24.0.11",
+		"@types/node": "^11.11.3",
 		"babel-minify": "^0.5.0",
 		"babel-preset-minify": "^0.5.0",
 		"coveralls": "^3.0.3",
 		"fs-extra": "^7.0.1",
-		"jest": "^24.3.1",
+		"jest": "^24.5.0",
 		"prettier": "^1.16.4",
 		"tslint": "^5.13.1",
 		"tslint-config-prettier": "^1.18.0",
 		"typescript": "^3.3.3333",
-		"util.fixture": "0.0.69",
-		"util.pkgwrap": "^0.0.104"
+		"util.pkgwrap": "^0.0.105"
 	},
 	"scripts": {
-		"all": "yarn install && yarn build && yarn test",
+		"all": "yarn install && yarn build && yarn test && yarn manifest",
 		"build": "yarn clean && yarn lint && yarn prettier && yarn build:es && yarn build:umd",
 		"build:es": "tsc -p . && minify index.js --out-file index.es.min.js",
 		"build:umd": "babel index.js --out-file index.umd.min.js",
@@ -53,7 +52,7 @@
 		"clean:dist": "yarn clean && rimraf node_modules/ yarn.lock",
 		"coverage": "pkgwrap --coverage --jest",
 		"lint": "pkgwrap --lint",
-		"prepublishOnly": "yarn run all",
+		"manifest": "npm pack --dry-run",
 		"prettier": "prettier --write \"**/*.{ts,tsx,js,json,yaml,yml,css}\"",
 		"test": "jest"
 	}
