--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "util.promise",
-	"version": "0.0.27",
+	"version": "0.0.28",
 	"author": "jmquigley <jmquigley@outlook.com>",
 	"description": "Utility functions for handling promises",
 	"private": false,
@@ -15,6 +15,7 @@
 	"engines": {
 		"node": ">=7.x"
 	},
+	"prettier": "@jmquigley/prettier-config",
 	"main": "./index.umd.min.js",
 	"module": "./index.es.min.js",
 	"types": "./index.d.ts",
@@ -23,25 +24,26 @@
 		"index.d.ts"
 	],
 	"devDependencies": {
-		"@babel/cli": "^7.2.3",
-		"@babel/core": "^7.3.4",
-		"@babel/plugin-transform-modules-umd": "^7.2.0",
-		"@babel/preset-env": "^7.3.4",
-		"@babel/preset-typescript": "^7.3.3",
-		"@babel/runtime": "^7.3.4",
-		"@types/fs-extra": "5.0.5",
-		"@types/jest": "^24.0.11",
-		"@types/node": "^11.11.3",
-		"babel-minify": "^0.5.0",
-		"babel-preset-minify": "^0.5.0",
-		"coveralls": "^3.0.3",
-		"fs-extra": "^7.0.1",
-		"jest": "^24.5.0",
-		"prettier": "^1.16.4",
-		"tslint": "^5.13.1",
+		"@babel/cli": "^7.7.5",
+		"@babel/core": "^7.7.5",
+		"@babel/plugin-transform-modules-umd": "^7.7.4",
+		"@babel/preset-env": "^7.7.6",
+		"@babel/preset-typescript": "^7.7.4",
+		"@babel/runtime": "^7.7.6",
+		"@jmquigley/prettier-config": "^1.0.0",
+		"@types/fs-extra": "8.0.1",
+		"@types/jest": "^24.0.23",
+		"@types/node": "^12.12.17",
+		"babel-minify": "^0.5.1",
+		"babel-preset-minify": "^0.5.1",
+		"coveralls": "^3.0.9",
+		"fs-extra": "^8.1.0",
+		"jest": "^24.9.0",
+		"prettier": "^1.19.1",
+		"tslint": "^5.20.1",
 		"tslint-config-prettier": "^1.18.0",
-		"typescript": "^3.3.3333",
-		"util.pkgwrap": "^0.0.105"
+		"typescript": "^3.7.3",
+		"util.pkgwrap": "^0.0.115"
 	},
 	"scripts": {
 		"all": "yarn install && yarn build && yarn test && yarn manifest",
@@ -53,7 +55,7 @@
 		"coverage": "pkgwrap --coverage --jest",
 		"lint": "pkgwrap --lint",
 		"manifest": "npm pack --dry-run",
-		"prettier": "prettier --write \"**/*.{ts,tsx,js,json,yaml,yml,css}\"",
+		"prettier": "pkgwrap --prettier",
 		"test": "jest"
 	}
 }
